[package]
name = "toniefile"
version = "0.1.1"
edition = "2021"
authors = ["Pascal Jaeger <pascal.jaeger@leimstift.de>"]
license-file = "LICENSE"
description = "The Toniefile crate provides methods to write audio data in a format that can be played by a Toniebox"
homepage = "https://github.com/Schievel1/toniefile/"
repository = "https://github.com/Schievel1/toniefile/"
readme = "Readme.org"
keywords = ["audiobooks", "audio"]
categories = ["multimedia::audio", "multimedia::encoding"]
exclude = [
        "test/out/*",
        "test/assets/*",
        ".github/*",
]

[dependencies]
sha1 = "0.10.6"
audiopus = "^0.2"
libogg = "0.2.0"
prost = "0.6"
byteorder = "^1.0"
thiserror = "^1.0"
rand = "0.8.5"

[build-dependencies]
prost-build = { version = "0.6" }

[dev-dependencies]
wav = "^1.0"
hound = "^3.0"
